<resources>
    <string name="app_name">CineApp</string>

    <!-- MainActivity!-->
    <string name="movies_to_watch">CineApp: Movies to watch</string>

    <!-- DetailActivity!-->
    <string name="detail_film_title">Film Title</string>
    <string name="detail_imdb_rating_top">IMDB Rating</string>
    <string name="detail_playtime_top">Playtime</string>
    <string name="detail_age_rating_top">Age rating</string>
    <string name="detail_imdb_rating">IMDB Rating</string>
    <string name="detail_playtime">Playtime</string>
    <string name="detail_age_rating">Age rating</string>
    <string name="detail_summary">Summary</string>
    <string name="detail_choosetime">Choose time</string>
    <string name="detail_summary_content">Content</string>
    <string name="detail_times_and_tickets">Times and tickets</string>
    <string name="detail_times_and_tickets_nocontent">No times or tickets found.</string>
    <string name="detail_all_ages">All ages</string>
    <string name="detail_get_date">View times</string>
    <string name="detail_choosedate">Slide to view date</string>
    <string name="until">until</string>
    <string name="genre_header">Genre</string>
    <string name="genre_content">Action</string>
    <string name="unavailable">Unavailable</string>
    <string name="fully_booked">Sold out</string>

    <!-- TicketSelectionActivity!-->
    <string name="ticket_selection_title">Ticket selection</string>
    <string name="ticket_selection_info_header">Movie info</string>
    <string name="ticket_selection_info_movie">"Movie: "</string>
    <string name="ticket_selection_info_date">"Date: "</string>
    <string name="ticket_selection_info_start_time">"Start time: "</string>
    <string name="ticket_selection_info_end_time">"End time: "</string>
    <string name="ticket_selection_selector_header">Select tickets</string>
    <string name="ticket_selection_adult">Adult - €5,99</string>
    <string name="ticket_selection_amount">amount</string>
    <string name="ticket_selection_child">Child - €5,99</string>
    <string name="ticket_selection_student">Student - €2,99</string>
    <string name="ticket_selection_senior">Senior - €4,99</string>
    <string name="ticket_selection_continue_button">Continue to seat selection</string>
    <string name="no_tickets_selected">No tickets selected</string>
    <string name="maximum_available_tickets">"Available tickets: "</string>

    <!-- SeatSelectionActivity!-->
    <string name="seat_selection_title">Seat Selection</string>
    <string name="select_seats_start">"Select "</string>
    <string name="select_seats_end">" seats"</string>
    <string name="select_seats_end_single">" seat"</string>
    <string name="book_seats">Book seats</string>
    <string name="seat_selection_nothing_selected">No seats selected</string>
    <string name="movie_screen">Screen</string>
    <string name="selected_seats_unavailable">"Selected seats unavailable"</string>
    <string name="not_enough_space">Theater fully booked. Please select different time.</string>

    <!-- MyTicketsActivity!-->
    <string name="my_tickets_title">My Tickets</string>


    <!-- MyTicketsDetailActivity!-->
    <string name="my_ticket_detail_title">Ticket selection</string>
    <string name="my_ticket_detail_movie">"Movie: "</string>
    <string name="my_ticket_detail_date">"Date: "</string>
    <string name="my_ticket_detail_time">"Time: "</string>
    <string name="my_ticket_detail_theater">"Theater: "</string>
    <string name="my_ticket_detail_seat">"Seat: "</string>
    <string name="my_ticket_detail_type">"Type: "</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="student">Student</string>
    <string name="senior">Senior</string>

    <!-- CheckoutActivity!-->
    <string name="checkout_title">Checkout</string>
    <string name="checkout_info_header">Order summary</string>
    <string name="checkout_info_content">Content</string>
    <string name="checkout_button">Pay now</string>

    <string name="checkout_adult_tickets">"Adult tickets: "</string>
    <string name="checkout_child_tickets">"Child tickets: "</string>
    <string name="checkout_student_tickets">"Student tickets: "</string>
    <string name="checkout_senior_tickets">"Senior tickets: "</string>
    <string name="checkout_total_tickets">"Total: "</string>
    <string name="checkout_payment_amount">"Amount to be paid: €"</string>

    <!-- FailedPaymentActivity!-->
    <string name="failedHeader">"Transaction aborted"</string>
    <string name="failed_content">Payment failed. Return to Movie list.</string>
    <string name="back_to_detailed_activity">"Return to movie list"</string>

    <!-- PaymentActivity!-->
    <string name="paymentHeader">"Payment"</string>

    <!-- ConfirmationActivity!-->
    <string name="confirmationHeader">Order complete</string>
    <string name="confirmationContent">"Payment failed. You will be returned to Movie details. Please resubmit order."</string>
    <string name="confirmationButton">"Go to Movie details"</string>
    <string name="confirmation_tickets_added">Tickets added to My Tickets</string>

    <!-- tool_bar.xml!-->
    <string name="topbar_my_tickets">My tickets</string>

    <!-- recyclerview_row.xml!-->
    <string name="list_film_title">Film Title</string>
    <string name="list_film_description">Description</string>

    <!-- mytickets_row.xml!-->
    <string name="my_ticket_title">Film Title</string>
    <string name="my_ticket_date">Date</string>
    <string name="my_ticket_time">Time</string>

    <string name="my_ticket_detail_content">Content</string>

    <!-- schedule_row.xml!-->
    <string name="schedule_availability">" seats available"</string>
    <string name="url_language">pt_PT</string>
    <string name="seat_selection_select_correct_amount">Incorrect amount selected.</string>
    <string name="amount_selected">" seats selected"</string>
    <string name="single_selected">" seat selected"</string>
    <string name="select_seats">Select 0 seats</string>
    <string name="invalid_date_selected">Unavailable</string>


</resources>
