<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:paddingBottom="1dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/CineAppListViewItemBackground">

        <ImageView
            android:id="@+id/myTicketQRCode"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/myTicketTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:paddingLeft="20dp"
            android:text="@string/my_ticket_title"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/myTicketDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/myTicketTitle"
            android:paddingLeft="20dp"
            android:text="@string/my_ticket_date"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/myTicketTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/myTicketDate"
            android:layout_alignStart="@+id/myTicketDate"
            android:layout_below="@+id/myTicketDate"
            android:paddingLeft="20dp"
            android:text="@string/my_ticket_time"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

    </RelativeLayout>
</LinearLayout>